Address people post type layout issue

--- a/css/src/partials/_content-ext-research.scss
+++ b/css/src/partials/_content-ext-research.scss
@@ -437,8 +437,11 @@ body #fancybox-wrap {
 
 .people-listing-ul {
 	.people-listing-item:hover,
-	.people-listing-item:nth-child(2n){
+	.people-listing-item:nth-child(2n) {
 		background-color: transparent;
+	}
+	.people-listing-item:nth-child(2n - 1) {
+		clear: left;
 	}
 	.people-listing-item {
 		border-bottom: 0 none;
